[project]
name = "document360-mcp"
version = "0.1.0"
description = "A simple Model Context Protocol (MCP) server for accessing Document360 knowledge base content via GET operations. Built with [FastMCP](https://gofastmcp.com/)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
]
